--- a/aesthetic.css
+++ b/aesthetic.css
@@ -65,7 +65,10 @@ body {
 .container{
     display: flex;
     justify-content: center;
+    align-items: center;
 }
+
+/* heads */
 
 .head_hash,
 .head_ipa,
@@ -78,15 +81,12 @@ body {
 .head_visc,
 .head_rat,
 .head_500am,
-.head_vnrs{
+.head_vnrs,
+.head_bub{
     display: block;
     position: relative;
     margin:10px;
 }
-
-
-
-/* heads */
 
 .head_hash::before,
 .head_ipa::before,
@@ -99,7 +99,8 @@ body {
 .head_visc::before,
 .head_rat::before,
 .head_500am::before,
-.head_vnrs::before
+.head_vnrs::before,
+.head_bub::before
 {
     content:"";
     top: 0;
@@ -125,7 +126,8 @@ body {
 .head_visc:hover::before,
 .head_rat:hover::before,
 .head_500am:hover::before,
-.head_vnrs:hover::before
+.head_vnrs:hover::before,
+.head_bub:hover::before
 {
     opacity:0;
 }
@@ -141,7 +143,8 @@ body {
 .head_visc::after,
 .head_rat::after,
 .head_500am::after,
-.head_vnrs::after
+.head_vnrs::after,
+.head_bub::after
 {
     opacity: 0.75;
     top: 0;
@@ -304,4 +307,107 @@ body {
 .head_vnrs::after{
     background-image:url(images_out/vnrs_average.png);
     content:"vnrs";
+}
+
+.head_bub{
+    width: 184px;
+    height: 184px;
+}
+.head_bub::before{
+    background-image:url(images/bub.png);
+}
+.head_bub::after{
+    background-image:url(images_out/bub_average.png);
+    content:"BubblyPrototype";
+    font-size:large;
+}
+
+/* builds */
+
+.build_hash_new_base,
+.build_500am_base,
+.build_mail{
+    display: block;
+    position: relative;
+    margin:10px;
+}
+
+.build_hash_new_base::before,
+.build_500am_base::before,
+.build_mail::before
+{
+    content:"";
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    -webkit-transition: opacity 1s ease-in-out;
+    -moz-transition: opacity 1s ease-in-out;
+    -o-transition: opacity 1s ease-in-out;
+    transition: opacity 1s ease-in-out;
+    z-index:10;
+    background-size: cover;
+}
+
+.build_hash_new_base:hover::before,
+.build_500am_base:hover::before,
+.build_mail:hover::before
+{
+    opacity:0;
+}
+
+.build_hash_new_base::after,
+.build_500am_base::after,
+.build_mail::after
+{
+    opacity: 0.75;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    position: absolute;
+    z-index: -1;
+    text-align: center;
+    font-family: 'MinecraftFont';  
+    padding-top:20%;
+    white-space: pre-wrap;
+    font-size:large;
+}
+
+
+.build_hash_new_base{
+    width: 617px;
+    height: 356px;
+}
+.build_hash_new_base::before{
+    background-image:url(images/notable_builds/hash_new_base.png);
+}
+.build_hash_new_base::after{
+    background-image:url(images_out/hash_average.png);
+    content:"Hash's new base\A Some have called it sinister and negative,\A but it was always meant to be cozy";
+}
+
+.build_500am_base{
+    width: 801px;
+    height: 406px;
+}
+.build_500am_base::before{
+    background-image:url(images/notable_builds/500am_base.png);
+}
+.build_500am_base::after{
+    background-image:url(images_out/500am_base_average.png);
+    content:"500am's base\A Literally one of the grandest buildings on the server";
+}
+
+.build_mail{
+    width: 356px;
+    height: 347px;
+}
+.build_mail::before{
+    background-image:url(images/notable_builds/mail.png);
+}
+.build_mail::after{
+    background-image:url(images_out/mail_average.png);
+    content:"Post Office\A Have you recieved mail?";
 }
