--- a/aesthetic.css
+++ b/aesthetic.css
@@ -8,13 +8,27 @@
     font-size:100px;
     font-family: 'MinecraftFont';  
     left: 0;
-    line-height: 100px;
-    margin-top: -100px;
-    position: absolute;
+    /* line-height: 100px; */
+    /* margin-top: -100px; */
+    /* position: absolute; */
     text-align: center;
-    top: 50%;
+    /* top: 50%;*/
     width: 100%;
 }
+
+.subtitle {
+    font-size:70px;
+    font-family: 'MinecraftFont';  
+    left: 0;
+    /* line-height: 265px; */
+    /* margin-top: -100px; */
+    /* position: absolute; */
+    text-align: center;
+    /* top: 50%; */
+    width: 100%;
+}
+
+
 
 .page_title {
     font-size:100px;
@@ -38,17 +52,6 @@
     width: 100%;
 }
 
-.subtitle {
-    font-size:70px;
-    font-family: 'MinecraftFont';  
-    left: 0;
-    line-height: 265px;
-    margin-top: -100px;
-    position: absolute;
-    text-align: center;
-    top: 50%;
-    width: 100%;
-}
 
 p{
     font-size:35px;
@@ -109,9 +112,22 @@ body {
 
 .container{
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    margin:10px;
+    /* background-color: aquamarine; */
 }
+
+.title_container{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-top:16%;
+    /* background-color: aquamarine; */
+}
+
 
 /* heads */
 
@@ -158,6 +174,7 @@ body {
     -o-transition: opacity 1s ease-in-out;
     transition: opacity 1s ease-in-out;
     z-index:10;
+    max-width: 100%;
 }
 
 .head_hash:hover::before,
@@ -196,12 +213,13 @@ body {
     left: 0;
     bottom: 0;
     right: 0;
-    position: absolute;
+    position:absolute;
     z-index: -1;
     text-align: center;
     font-size:x-large;
     font-family: 'MinecraftFont';  
     padding-top:25%;
+    max-width: 100%;
 }
 
 
@@ -217,7 +235,7 @@ body {
 .head_hash::after{
     background-image:url(images_out/hash_average.png);
     content:"lilhashbrown";
-}
+} 
 
 
 
