--- a/event_style.css
+++ b/event_style.css
@@ -76,7 +76,7 @@
     font-family: 'MinecraftFont';  
     padding-top:20%;
     white-space: pre-wrap;
-    font-size:large;
+    font-size:x-large;
 }
 
 .event_mahoose_birthday_1{
