--- a/build_style.css
+++ b/build_style.css
@@ -60,7 +60,7 @@
     font-family: 'MinecraftFont';  
     padding-top:20%;
     white-space: pre-wrap;
-    font-size:large;
+    font-size:x-large;
 }
 
 
