--- a/head_style.css
+++ b/head_style.css
@@ -13,7 +13,8 @@
 .head_500am,
 .head_vnrs,
 .head_bub,
-.head_jozef{
+.head_jozef,
+.head_cow{
     display: block;
     position: relative;
     margin:10px;
@@ -32,7 +33,8 @@
 .head_500am::before,
 .head_vnrs::before,
 .head_bub::before,
-.head_jozef::before
+.head_jozef::before,
+.head_cow::before
 {
     content:"";
     top: 0;
@@ -61,7 +63,8 @@
 .head_500am:hover::before,
 .head_vnrs:hover::before,
 .head_bub:hover::before,
-.head_jozef:hover::before
+.head_jozef:hover::before,
+.head_cow:hover::before
 {
     opacity:0;
 }
@@ -79,7 +82,8 @@
 .head_500am::after,
 .head_vnrs::after,
 .head_bub::after,
-.head_jozef::after
+.head_jozef::after,
+.head_cow::after
 {
     opacity: 0.75;
     top: 0;
@@ -266,5 +270,20 @@
 .head_jozef::after{
     background-image:url(images_out/jozef_average.png);
     content:"jozef45";
+    font-size:large;
+}
+
+
+.head_cow{
+    width: 184px;
+    height: 184px;
+    
+}
+.head_cow::before{
+    background-image:url(images/heads/cow.png);
+}
+.head_cow::after{
+    background-image:url(images_out/cow_average.png);
+    content:"ExcitedCow494";
     font-size:large;
 }
