--- a/build_style.css
+++ b/build_style.css
@@ -122,7 +122,7 @@
 }
 .build_prince_rat_axolotls::after{
     background-image:url(images_out/prince_rat_axolotls_average.png);
-    content:"Prince Rat's Axolotls\A Does he have every color? Does he have more than Hash?";
+    content:"Prince Rat's Axolotls\A Does he have every color?\A Does he have more than Hash?";
 }
 
 .build_pink_spawn{
