--- a/event_style.css
+++ b/event_style.css
@@ -9,7 +9,18 @@
 .event_bee_halloween,
 .event_nova_halloween,
 .event_nzzketch_halloween,
-.event_picture_box_halloween{
+.event_picture_box_halloween,
+
+.event_akoot_cafe,
+.event_akoot_cafe_sitting,
+.event_christmas_day_after,
+.event_christmas_friends,
+.event_christmas_friends_after,
+.event_christmas_tree,
+.event_christmas_trees,
+.event_december_court,
+.event_december_court_judge,
+.event_december_court_judge_attacked{
     display: block;
     position: relative;
     margin:10px;
@@ -24,8 +35,18 @@
 .event_bee_halloween::before,
 .event_nova_halloween::before,
 .event_nzzketch_halloween::before,
-.event_picture_box_halloween::before
-{
+.event_picture_box_halloween::before,
+
+.event_akoot_cafe::before,
+.event_akoot_cafe_sitting::before,
+.event_christmas_day_after::before,
+.event_christmas_friends::before,
+.event_christmas_friends_after::before,
+.event_christmas_tree::before,
+.event_christmas_trees::before,
+.event_december_court::before,
+.event_december_court_judge::before,
+.event_december_court_judge_attacked::before{
     content:"";
     top: 0;
     left: 0;
@@ -49,7 +70,18 @@
 .event_bee_halloween:hover::before,
 .event_nova_halloween:hover::before,
 .event_nzzketch_halloween:hover::before,
-.event_picture_box_halloween:hover::before
+.event_picture_box_halloween:hover::before,
+
+.event_akoot_cafe:hover::before,
+.event_akoot_cafe_sitting:hover::before,
+.event_christmas_day_after:hover::before,
+.event_christmas_friends:hover::before,
+.event_christmas_friends_after:hover::before,
+.event_christmas_tree:hover::before,
+.event_christmas_trees:hover::before,
+.event_december_court:hover::before,
+.event_december_court_judge:hover::before,
+.event_december_court_judge_attacked:hover::before
 {
     opacity:0;
 }
@@ -63,7 +95,18 @@
 .event_bee_halloween::after,
 .event_nova_halloween::after,
 .event_nzzketch_halloween::after,
-.event_picture_box_halloween::after
+.event_picture_box_halloween::after,
+
+.event_akoot_cafe::after,
+.event_akoot_cafe_sitting::after,
+.event_christmas_day_after::after,
+.event_christmas_friends::after,
+.event_christmas_friends_after::after,
+.event_christmas_tree::after,
+.event_christmas_trees::after,
+.event_december_court::after,
+.event_december_court_judge::after,
+.event_december_court_judge_attacked::after
 {
     opacity: 0.75;
     top: 0;
@@ -197,4 +240,113 @@
 .event_picture_box_halloween::after{
     background-image:url(images_out/picture_box_halloween_average.png);
     content:"Picture Box's Contest Submission";
+}
+
+.event_akoot_cafe{
+    width: 777px;
+    height: 404px;
+}
+.event_akoot_cafe::before{
+    background-image:url(images/events/akoot_cafe.png);
+}
+.event_akoot_cafe::after{
+    background-image:url(images_out/akoot_cafe_average.png);
+    content:"Akoot's Cafe \A Located directly behind spawn.";
+}
+
+.event_akoot_cafe_sitting{
+    width: 571px;
+    height: 385px;
+}
+.event_akoot_cafe_sitting::before{
+    background-image:url(images/events/akoot_cafe_sitting.png);
+}
+.event_akoot_cafe_sitting::after{
+    background-image:url(images_out/akoot_cafe_sitting_average.png);
+    content:"Akoot's Cafe with customers\A Maybe the most famous picture on the server.";
+}
+
+.event_christmas_friends{
+    width: 642px;
+    height: 380px;
+}
+.event_christmas_friends::before{
+    background-image:url(images/events/christmas_friends.png);
+}
+.event_christmas_friends::after{
+    background-image:url(images_out/christmas_friends_average.png);
+    content:"Christmas with friends";
+}
+
+.event_christmas_friends_after{
+    width: 663px;
+    height: 391px;
+}
+.event_christmas_friends_after::before{
+    background-image:url(images/events/christmas_friends_after.png);
+}
+.event_christmas_friends_after::after{
+    background-image:url(images_out/christmas_friends_after_average.png);
+    content:"Friends enjoying Christmas";
+}
+
+.event_christmas_tree{
+    width: 734px;
+    height: 408px;
+}
+.event_christmas_tree::before{
+    background-image:url(images/events/christmas_tree.png);
+}
+.event_christmas_tree::after{
+    background-image:url(images_out/christmas_tree_average.png);
+    content:"Christmas trees at spawn";
+}
+
+.event_christmas_trees{
+    width: 853px;
+    height: 438px;
+}
+.event_christmas_trees::before{
+    background-image:url(images/events/christmas_trees.png);
+}
+.event_christmas_trees::after{
+    background-image:url(images_out/christmas_trees_average.png);
+    content:"More Christmas trees at spawn";
+}
+
+
+.event_december_court{
+    width: 535px;
+    height: 313px;
+}
+.event_december_court::before{
+    background-image:url(images/events/december_court.png);
+}
+.event_december_court::after{
+    background-image:url(images_out/december_court_average.png);
+    content:"December Court \A Akoot vs. Xanxus";
+}
+
+.event_december_court_judge{
+    width: 477px;
+    height: 321px;
+}
+.event_december_court_judge::before{
+    background-image:url(images/events/december_court_judge.png);
+}
+.event_december_court_judge::after{
+    background-image:url(images_out/december_court_judge_average.png);
+    content:"December Court Judge\A Hash (why did they let her be judge?)";
+}
+
+.event_december_court_judge_attacked{
+    width: 542px;
+    height: 367px;
+}
+.event_december_court_judge_attacked::before{
+    background-image:url(images/events/december_court_judge_attacked.png);
+}
+.event_december_court_judge_attacked::after{
+    background-image:url(images_out/december_court_judge_attacked_average.png);
+    content:"December Court Judge Attacked!\A But who really started it?";
 }
