--- a/head_style.css
+++ b/head_style.css
@@ -15,7 +15,17 @@
 .head_bub,
 .head_jozef,
 .head_cow,
-.head_neoma{
+.head_neoma,
+
+.head_harpy,
+.head_mahoose,
+.head_men,
+.head_nova,
+.head_women,
+.head_yamda,
+.head_zap,
+.head_big
+{
     display: block;
     position: relative;
     margin:10px;
@@ -36,7 +46,16 @@
 .head_bub::before,
 .head_jozef::before,
 .head_cow::before,
-.head_neoma::before
+.head_neoma::before,
+
+.head_harpy::before,
+.head_mahoose::before,
+.head_men::before,
+.head_nova::before,
+.head_women::before,
+.head_yamda::before,
+.head_zap::before,
+.head_big::before
 {
     content:"";
     top: 0;
@@ -67,7 +86,16 @@
 .head_bub:hover::before,
 .head_jozef:hover::before,
 .head_cow:hover::before,
-.head_neoma:hover::before
+.head_neoma:hover::before,
+
+.head_harpy:hover::before,
+.head_mahoose:hover::before,
+.head_men:hover::before,
+.head_nova:hover::before,
+.head_women:hover::before,
+.head_yamda:hover::before,
+.head_zap:hover::before,
+.head_big:hover::before
 {
     opacity:0;
 }
@@ -87,7 +115,16 @@
 .head_bub::after,
 .head_jozef::after,
 .head_cow::after,
-.head_neoma::after
+.head_neoma::after,
+
+.head_harpy::after,
+.head_mahoose::after,
+.head_men::after,
+.head_nova::after,
+.head_women::after,
+.head_yamda::after,
+.head_zap::after,
+.head_big::after
 {
     opacity: 0.75;
     top: 0;
@@ -278,7 +315,7 @@
 }
 
 .head_cow{
-    width: 184px;
+    width:184px;
     height: 184px;
     
 }
@@ -303,4 +340,116 @@
     background-image:url(images_out/neoma_average.png);
     content:"Neoma__";
     font-size:x-large;
+}
+
+.head_harpy{
+    width: 184px;
+    height: 184px;
+    
+}
+.head_harpy::before{
+    background-image:url(images/heads/harpy.png);
+}
+.head_harpy::after{
+    background-image:url(images_out/harpy_average.png);
+    content:"Spacewardharpy7";
+    font-size:large;
+}
+
+.head_mahoose{
+    width: 184px;
+    height: 184px;
+    
+}
+.head_mahoose::before{
+    background-image:url(images/heads/mahoose.png);
+}
+.head_mahoose::after{
+    background-image:url(images_out/mahoose_average.png);
+    content:"Mahoose";
+    font-size:x-large;
+}
+
+.head_men{
+    width: 184px;
+    height: 184px;
+    
+}
+.head_men::before{
+    background-image:url(images/heads/men.png);
+}
+.head_men::after{
+    background-image:url(images_out/men_average.png);
+    content:"MenKissing";
+    font-size:x-large;
+}
+
+.head_women{
+    width: 184px;
+    height: 184px;
+    
+}
+.head_women::before{
+    background-image:url(images/heads/women.png);
+}
+.head_women::after{
+    background-image:url(images_out/women_average.png);
+    content:"WomenKissing";
+    font-size:x-large;
+}
+
+.head_yamda{
+    width: 184px;
+    height: 184px;
+    
+}
+.head_yamda::before{
+    background-image:url(images/heads/yamda.png);
+}
+.head_yamda::after{
+    background-image:url(images_out/yamda_average.png);
+    content:"Yamdalorian";
+    font-size:x-large;
+}
+
+.head_zap{
+    width: 184px;
+    height: 184px;
+    
+}
+.head_zap::before{
+    background-image:url(images/heads/zap.png);
+}
+.head_zap::after{
+    background-image:url(images_out/zap_average.png);
+    content:"Zaoper";
+    font-size:x-large;
+}
+
+.head_big{
+    width: 184px;
+    height: 184px;
+    
+}
+.head_big::before{
+    background-image:url(images/heads/big.png);
+}
+.head_big::after{
+    background-image:url(images_out/big_average.png);
+    content:"BiggWang";
+    font-size:x-large;
+}
+
+.head_nova{
+    width: 184px;
+    height: 184px;
+    
+}
+.head_nova::before{
+    background-image:url(images/heads/nova.png);
+}
+.head_nova::after{
+    background-image:url(images_out/nova_average.png);
+    content:"ApophisNova";
+    font-size:large;
 }
