--- a/event_style.css
+++ b/event_style.css
@@ -21,6 +21,8 @@
 .event_december_court,
 .event_december_court_judge,
 .event_december_court_judge_attacked,
+.event_traveler,
+.event_traveler_entrance,
 
 .event_new_years_1,
 .event_new_years_2,
@@ -53,6 +55,8 @@
 .event_december_court::before,
 .event_december_court_judge::before,
 .event_december_court_judge_attacked::before,
+.event_traveler::before,
+.event_traveler_entrance::before,
 
 .event_new_years_1::before,
 .event_new_years_2::before,
@@ -95,6 +99,8 @@
 .event_december_court:hover::before,
 .event_december_court_judge:hover::before,
 .event_december_court_judge_attacked:hover::before,
+.event_traveler:hover::before,
+.event_traveler_entrance:hover::before,
 
 .event_new_years_1:hover::before,
 .event_new_years_2:hover::before,
@@ -126,6 +132,8 @@
 .event_december_court::after,
 .event_december_court_judge::after,
 .event_december_court_judge_attacked::after,
+.event_traveler::after,
+.event_traveler_entrance::after,
 
 .event_new_years_1::after,
 .event_new_years_2::after,
@@ -423,4 +431,28 @@
 .event_new_years_4::after{
     background-image:url(images_out/new_years_4_average.png);
     content:"New Year's Eve\A More friends watching the fireworks.";
+}
+
+.event_traveler{
+    width: 768px;
+    height: 410px;
+}
+.event_traveler::before{
+    background-image:url(images/events/traveler.png);
+}
+.event_traveler::after{
+    background-image:url(images_out/traveler_average.png);
+    content:"Traveler Minigame\A Created by Jozef and extremely difficult!";
+}
+
+.event_traveler_entrance{
+    width: 768px;
+    height: 410px;
+}
+.event_traveler_entrance::before{
+    background-image:url(images/events/traveler_entrance.png);
+}
+.event_traveler_entrance::after{
+    background-image:url(images_out/traveler_entrance_average.png);
+    content:"Traveler Minigame\A Created by Jozef and extremely difficult!";
 }
