--- a/build_style.css
+++ b/build_style.css
@@ -10,7 +10,8 @@
 .build_joe_utopia,
 .build_demon,
 .build_dreamwick,
-.build_tatooine
+.build_tatooine,
+.build_joe_city
 {
     display: block;
     position: relative;
@@ -27,7 +28,8 @@
 .build_joe_utopia::before,
 .build_demon::before,
 .build_dreamwick::before,
-.build_tatooine::before
+.build_tatooine::before,
+.build_joe_city::before
 {
     content:"";
     top: 0;
@@ -53,7 +55,8 @@
 .build_joe_utopia:hover::before,
 .build_demon:hover::before,
 .build_dreamwick:hover::before,
-.build_tatooine:hover::before
+.build_tatooine:hover::before,
+.build_joe_city:hover::before
 {
     opacity:0;
 }
@@ -68,7 +71,8 @@
 .build_joe_utopia::after,
 .build_demon::after,
 .build_dreamwick::after,
-.build_tatooine::after
+.build_tatooine::after,
+.build_joe_city::after
 {
     opacity: 0.75;
     top: 0;
@@ -218,3 +222,14 @@
     content:"Joe's Tatooine\A A Star Wars inspired build";
 }
 
+.build_joe_city{
+    width: 768px;
+    height: 406px;
+}
+.build_joe_city::before{
+    background-image:url(images/notable_builds/joe_city.png);
+}
+.build_joe_city::after{
+    background-image:url(images_out/joe_city_average.png);
+    content:"Joe's City\A Home to the tallest tower on the server (literally ever).";
+}
