--- a/build_style.css
+++ b/build_style.css
@@ -231,5 +231,5 @@
 }
 .build_joe_city::after{
     background-image:url(images_out/joe_city_average.png);
-    content:"Joe's City\A Home to the tallest tower on the server (literally ever).";
+    content:"Joe's City\A A modern city with a New York feel";
 }
